#19762: Bugfix: Removing links is broken on the develop test link.

--- a/css/components/sheet.css
+++ b/css/components/sheet.css
@@ -146,6 +146,9 @@ body.mobile .mega-sheet.normal .sheet .main {
 
 body.web-desktop .mega-sheet {
     justify-content: center;
+}
+
+body.web-desktop .mega-sheet.node-name-dialog {
     z-index: 1201;
 }
 
