--- a/css/dialogs.css
+++ b/css/dialogs.css
@@ -9502,7 +9502,7 @@ body.web-desktop .mega-sheet.report-abuse .sheet {
 
 body.web-desktop .mega-dialog.s4 {
     width: calc(100% - 16px);
-    max-width: 562px;
+    max-width: 640px;
     min-width: unset;
     max-height: 95%;
     margin: auto;
@@ -9521,7 +9521,7 @@ body.web-desktop .mega-dialog.s4 button.close {
     top: 1rem;
     right: 1rem;
     left: auto;
-    z-index: auto;
+    z-index: 10;
     margin: 0;
 }
 body.web-desktop .mega-dialog.s4.dialog-template-main > header {
@@ -9532,6 +9532,9 @@ body.web-desktop .mega-dialog.s4.s4-create-group-dialog.dialog-template-main .co
 body.web-desktop .mega-dialog.s4.s4-create-access-key-dialog.dialog-template-main .content-block {
     padding: 0 40px;
     background: transparent;
+}
+body.web-desktop .mega-dialog.s4 > footer .footer-container:empty {
+    display: none;
 }
 body.web-desktop .mega-dialog.s4.dialog-template-main > footer .footer-container {
     padding: 16px 40px 0;
@@ -9946,8 +9949,8 @@ body.web-desktop .mega-dialog.s4 > footer button ~ button {
     text-decoration: none;
 }
 .mega-dialog.s4-bucket-settings-dialog .bucket-policies .policies-editor {
-    height: 226px;
-    margin: 8px 0 -4px;
+    height: 222px;
+    margin: 8px 0 0;
 }
 .mega-dialog.s4-bucket-settings-dialog .bucket-policies .policies-editor * {
     font: var(--text-code1);
@@ -9972,14 +9975,15 @@ body.web-desktop .mega-dialog.s4 > footer button ~ button {
     text-decoration: none;
 }
 .mega-dialog.s4-bucket-settings-dialog .policies-editor .CodeMirror {
-    border: 2px solid var(--surface-grey-2);
+    background: var(--mobile-surface-1);
+    border: 2px solid var(--mobile-surface-2);
     border-radius: 12px;
 }
 .mega-dialog.s4-bucket-settings-dialog .policies-editor .CodeMirror-scroll {
     padding: 14px 0;
 }
 .mega-dialog.s4-bucket-settings-dialog .policies-editor .CodeMirror-linenumbers {
-    background-color: var(--surface-grey-2);
+    background: var(--mobile-surface-2);
     width: 48px;
 }
 .mega-dialog.s4-bucket-settings-dialog .bucket-policy-warning {
@@ -10050,17 +10054,18 @@ body.web-desktop .mega-dialog.s4 > footer button ~ button {
 
 /* S4 Dialogs. Setup/Onboarding dialog */
 
-.mega-dialog.s4-setup-dialog {
-    height: calc(100% - 48px);
-    max-height: 668px;
+body.web-desktop .mega-dialog.s4-setup-dialog {
+    height: 95%;
     overflow: hidden;
-    width: 800px;
+    padding: 0;
+    max-height: 668px;
+    max-width: 800px;
 }
 
 /* Side pane */
 
 .mega-dialog.s4-setup-dialog .side-pane {
-    background: var(--surface-grey-1);
+    background: var(--mobile-surface-2);
     box-sizing: border-box;
     flex: 0 0 auto;
     padding: 48px 36px;
@@ -10208,6 +10213,7 @@ body.web-desktop .mega-dialog.s4 > footer button ~ button {
 }
 
 .mega-dialog.s4-setup-dialog .content-block {
+    background: none;
     padding: 0;
     padding-inline-end: 12px;
 }
@@ -10398,6 +10404,7 @@ body.web-desktop .mega-dialog.s4 > footer button ~ button {
     margin: 1px 0 0;
     padding: 14px;
     outline: none;
+    text-align: start;
     transition: var(--transition-bg-color);
 }
 
